# bunkatech

./: .gitignore  Dockerfile  Makefile  README copy.md  README.md  Untitled.ipynb  app.py  basic_class.ipynb  bourdieu_analysis.ipynb  camembert.ipynb  class_topics.ipynb  commit.sh  demo.ipynb  demo_basic.ipynb  demo_bourdieu.ipynb  demo_bunka.ipynb  demo_nested_topic_modeling.ipynb  demo_networks.ipynb  demo_sbert_fit.ipynb  demo_topic_modeling.ipynb  demo_trends.ipynb  folding_test.py  humility.ipynb  ignore.sh  instructions.toml  mixed_embeddings.ipynb  nested_topic_extented_corpus.ipynb  nested_topic_modeling.ipynb  pipeline_test.ipynb  pyproject.toml  requirements.txt  requirements_old.txt  setup.py  setup.sh  streamlit_instructions.toml  test.py  test_2.py  test_class.ipynb  test_nested_class.ipynb  top_documents.ipynb  (+5 more)
bunkatech/: __init__.py  basic_class.py  bunka_class.py  camembert.py  hierarchical_clusters.py  hierarchical_clusters_label.py  nested_topic_modeling.py  query.py  sbert_fit.ipynb  specificity.py  topic_modeling.ipynb  topic_modeling.py  vocabulary_extension.py
bunkatech/classifier/: README.md  sbert_fit.py
bunkatech/images/: images_embedding.py
bunkatech/search/: README.md  (+4 more)
docs/: mkdocs.yml
examples/: demo_basic.ipynb  demo_bunka.ipynb  demo_extented_vocabulary.ipynb  demo_nested_topic_modeling.ipynb  demo_networks.ipynb  demo_semantic_networks.ipynb  demo_topic_modeling.ipynb  demo_trends.ipynb
saved_graph/: category_cooccurence.html  sankey.html  sunburst.html  terms_cooccurence.html  treemap.html
test/: pyvenv.cfg
tests/: test.py
(+49 files in other folders)
